--- a/Consoles.html
+++ b/Consoles.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consoles</title>
-  <link rel="stylesheet" href="/all.css">
+  <link rel="stylesheet" href="./all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
@@ -14,18 +14,18 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+      <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
       <input type="checkbox" id="check">
       <label for="check" class="open-menu">&#9776;</label>
       <label for="check" class="close-menu">&times;</label>
       <ul class="menu">
-        <li><a href="/home.html">Home</a></li>
-        <li><a href="/About Us.html">About Us</a></li>
-        <li><a href="/Upcoming Games.html">Upcoming Games</a></li>
-        <li><a href="/Consoles.html">Consoles</a></li>
-        <li><a href="/Gaming Peripherals.html">Gaming Peripherals</a></li>
-        <li><a href="/">Games</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./About Us.html">About Us</a></li>
+        <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
+        <li><a href="./Consoles.html">Consoles</a></li>
+        <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
+        <li><a href="./Games.html">Games</a></li>
+        <li><a href="./FAQs.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -39,7 +39,7 @@
     
     <div class="console-grid">
         <div class="console-card">
-            <img src="/images/consoles/nintentdo switch.webp" alt="Nintendo Switch">
+            <img src="./images/consoles/nintentdo switch.webp" alt="Nintendo Switch">
             <div class="price-overlay">$239.99</div>
             <div class="console-info">
                 <h3>Nintendo Switch</h3>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="console-card">
-            <img src="/images/consoles/playstation 5.jpg" alt="PlayStation 5">
+            <img src="./images/consoles/playstation 5.jpg" alt="PlayStation 5">
             <div class="price-overlay">$499.99</div>
             <div class="console-info">
                 <h3>PlayStation 5</h3>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="console-card">
-            <img src="/images/consoles/x box series x.webp" alt="Xbox Series X">
+            <img src="./images/consoles/x box series x.webp" alt="Xbox Series X">
             <div class="price-overlay">$424.99</div>
             <div class="console-info">
                 <h3>Xbox Series X</h3>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="console-card">
-            <img src="/c and g peripherals/steam deck.jpg" alt="Steam Deck">
+            <img src="./c and g peripherals/steam deck.jpg" alt="Steam Deck">
             <div class="price-overlay">$399.99</div>
             <div class="console-info">
                 <h3>Steam Deck</h3>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="console-card">
-            <img src="/images/consoles/nintendo 3d.avif" alt="Nintendo 3DS">
+            <img src="./images/consoles/nintendo 3d.avif" alt="Nintendo 3DS">
             <div class="price-overlay">$139.99</div>
             <div class="console-info">
                 <h3>Nintendo 3DS</h3>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="console-card">
-            <img src="/c and g peripherals/ps 4.jpg" alt="PlayStation 4">
+            <img src="./c and g peripherals/ps 4.jpg" alt="PlayStation 4">
             <div class="price-overlay">$299.99</div>
             <div class="console-info">
                 <h3>PlayStation 4</h3>
