--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gaming Store</title>
-  <link rel="stylesheet" href="/all.css">
+  <link rel="stylesheet" href="./all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -44,7 +44,7 @@
       <h1>Now Trending 🔥🔥🔥</h1>
       <div class="trending-game">
         <div class="game-image">
-          <img src="/images/Trending1.jpg" alt="Farming Simulator">
+          <img src="./images/Trending1.jpg" alt="Farming Simulator">
         </div>
         <div class="game-content">
           <h2>Trending: Farming Simulator</h2>
@@ -62,7 +62,7 @@
 
       <div class="trending-game">
         <div class="game-image">
-          <img src="/images/trending 2.jpg" alt="Murky Divers">
+          <img src="./images/trending 2.jpg" alt="Murky Divers">
         </div>
         <div class="game-content">
           <h2>Trending: Murky Divers</h2>
@@ -80,7 +80,7 @@
 
       <div class="trending-game">
         <div class="game-image">
-          <img src="/images/trending 3.jpg" alt="Age of Empires">
+          <img src="./images/trending 3.jpg" alt="Age of Empires">
         </div>
         <div class="game-content">
           <h2>Age of Empires</h2>
