--- a/About Us.html
+++ b/About Us.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Gaming Store</title>
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="./all.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-          <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+          <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
           <input type="checkbox" id="check">
           <label for="check" class="open-menu">&#9776;</label>
           <label for="check" class="close-menu">&times;</label>
           <ul class="menu">
-            <li><a href="/home.html">Home</a></li>
-            <li><a href="/About Us.html">About Us</a></li>
-            <li><a href="/Upcoming Games.html">Upcoming Games</a></li>
-            <li><a href="/Consoles.html">Consoles</a></li>
-            <li><a href="/Gaming Peripherals.html">Gaming Peripherals</a></li>
-            <li><a href="/Games.html">Games</a></li>
-            <li><a href="/FAQs.html">FAQ</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./About Us.html">About Us</a></li>
+            <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
+            <li><a href="./Consoles.html">Consoles</a></li>
+            <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
+            <li><a href="./Games.html">Games</a></li>
+            <li><a href="./FAQs.html">FAQ</a></li>
           </ul>
         </nav>
       </header>
