--- a/Upcoming Games.html
+++ b/Upcoming Games.html
@@ -9,18 +9,18 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+      <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
       <input type="checkbox" id="check">
       <label for="check" class="open-menu">&#9776;</label>
       <label for="check" class="close-menu">&times;</label>
       <ul class="menu">
-        <li><a href="/home.html">Home</a></li>
-        <li><a href="/About Us.html">About Us</a></li>
-        <li><a href="/Upcoming Games.html">Upcoming Games</a></li>
-        <li><a href="/Consoles.html">Consoles</a></li>
-        <li><a href="/Gaming Peripherals.html">Gaming Peripherals</a></li>
-        <li><a href="/Games.html">Games</a></li>
-        <li><a href="/FAQs.html">FAQ</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./About Us.html">About Us</a></li>
+        <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
+        <li><a href="./Consoles.html">Consoles</a></li>
+        <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
+        <li><a href="./Games.html">Games</a></li>
+        <li><a href="./FAQs.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -42,27 +42,27 @@
                         <div class="slide">
                             <div class="game-grid">
                                 <div class="game-card">
-                                    <img src="/images upcoming g/ug 10.jpg" alt="Game 1">
+                                    <img src="./images upcoming g/ug 10.jpg" alt="Game 1">
                                     <div class="release-date">Release: 2025-01-28</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG 11.jpg" alt="Game 2">
+                                    <img src="./images upcoming g/UG 11.jpg" alt="Game 2">
                                     <div class="release-date">Release: 2025-02-18</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/ug 12.jpg" alt="Game 3">
+                                    <img src="./images upcoming g/ug 12.jpg" alt="Game 3">
                                     <div class="release-date">Release: 2025-03-15</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/ug 9.jpg" alt="Game 4">
+                                    <img src="./images upcoming g/ug 9.jpg" alt="Game 4">
                                     <div class="release-date">Release: 2025-04-20</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG3.avif" alt="Game 5">
+                                    <img src="./images upcoming g/UG3.avif" alt="Game 5">
                                     <div class="release-date">Release: 2025-05-10</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG4.avif" alt="Game 6">
+                                    <img src="./images upcoming g/UG4.avif" alt="Game 6">
                                     <div class="release-date">Release: 2025-06-15</div>
                                 </div>
                             </div>
@@ -71,27 +71,27 @@
                         <div class="slide">
                             <div class="game-grid">
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG5.avif" alt="Game 7">
+                                    <img src="./images upcoming g/UG5.avif" alt="Game 7">
                                     <div class="release-date">Release: 2025-07-20</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG6.avif" alt="Game 8">
+                                    <img src="./images upcoming g/UG6.avif" alt="Game 8">
                                     <div class="release-date">Release: 2025-08-15</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/UG7.avif" alt="Game 9">
+                                    <img src="./images upcoming g/UG7.avif" alt="Game 9">
                                     <div class="release-date">Release: 2025-09-10</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/ug8.avif" alt="Game 10">
+                                    <img src="./images upcoming g/ug8.avif" alt="Game 10">
                                     <div class="release-date">Release: 2025-10-25</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/g1.jpg" alt="Game 11">
+                                    <img src="./images upcoming g/g1.jpg" alt="Game 11">
                                     <div class="release-date">Release: 2025-11-30</div>
                                 </div>
                                 <div class="game-card">
-                                    <img src="/images upcoming g/g10.jpg" alt="Game 12">
+                                    <img src="./images upcoming g/g10.jpg" alt="Game 12">
                                     <div class="release-date">Release: 2025-12-15</div>
                                 </div>
                             </div>
