Order page index.html

--- a/Consoles.html
+++ b/Consoles.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-
-
 <body>
   <header>
     <nav class="navbar">
@@ -19,13 +17,14 @@
       <label for="check" class="open-menu">&#9776;</label>
       <label for="check" class="close-menu">&times;</label>
       <ul class="menu">
-        <li><a href="./home.html">Home</a></li>
+        <li><a href="./index1.html">Home</a></li>
         <li><a href="./About Us.html">About Us</a></li>
         <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
         <li><a href="./Consoles.html">Consoles</a></li>
-        <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
+        <li><a href="./Games.html">Gaming Peripherals</a></li>
         <li><a href="./Games.html">Games</a></li>
         <li><a href="./FAQs.html">FAQ</a></li>
+        <li><a href="./index.html">Order Page </a></li>
       </ul>
     </nav>
   </header>
