--- a/Gaming Peripherals.html
+++ b/Gaming Peripherals.html
@@ -16,13 +16,14 @@
         <label for="check" class="open-menu">&#9776;</label>
         <label for="check" class="close-menu">&times;</label>
         <ul class="menu">
-          <li><a href="/home.html">Home</a></li>
-          <li><a href="/About Us.html">About Us</a></li>
-          <li><a href="/Upcoming Games.html">Upcoming Games</a></li>
-          <li><a href="/Consoles.html">Consoles</a></li>
-          <li><a href="/Gaming Peripherals.html">Gaming Peripherals</a></li>
-          <li><a href="/Games.html">Games</a></li>
-          <li><a href="/FAQs.html">FAQ</a></li>
+          <li><a href="./index1.html">Home</a></li>
+          <li><a href="./About Us.html">About Us</a></li>
+          <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
+          <li><a href="./Consoles.html">Consoles</a></li>
+          <li><a href="./Games.html">Gaming Peripherals</a></li>
+          <li><a href="./Games.html">Games</a></li>
+          <li><a href="./FAQs.html">FAQ</a></li>
+          <li><a href="./index.html">Order Page </a></li>
         </ul>
       </nav>
     </header>
