--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- This is the Order page -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,19 +12,19 @@
 <body>
     <header>
         <nav class="navbar">
-          <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+          <a href="#" class="logo"><img src="../images/logo_transparent.png" alt="Logo"></a>
           <input type="checkbox" id="check">
           <label for="check" class="open-menu">&#9776;</label>
           <label for="check" class="close-menu">&times;</label>
           <ul class="menu">
-            <li><a href="./index1.html">Home</a></li>
-            <li><a href="./About Us.html">About Us</a></li>
-            <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
-            <li><a href="./Consoles.html">Consoles</a></li>
-            <li><a href="./Games.html">Gaming Peripherals</a></li>
-            <li><a href="./Games.html">Games</a></li>
-            <li><a href="./FAQs.html">FAQ</a></li>
-            <li><a href="./index.html">Order Page </a></li>
+            <li><a href="../index1.html">Home</a></li>
+            <li><a href="../About Us.html">About Us</a></li>
+            <li><a href="../Upcoming Games.html">Upcoming Games</a></li>
+            <li><a href="../Consoles.html">Consoles</a></li>
+            <li><a href="../Games.html">Gaming Peripherals</a></li>
+            <li><a href="../Games.html">Games</a></li>
+            <li><a href="../FAQs.html">FAQ</a></li>
+            <li><a href="../index.html">Order Page </a></li>
           </ul>
         </nav>
       </header>
