--- a/Upcoming Games.html
+++ b/Upcoming Games.html
@@ -21,6 +21,8 @@
         <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
         <li><a href="./Games.html">Games</a></li>
         <li><a href="./FAQs.html">FAQ</a></li>
+        <li><a href="./index.html">Order Page </a></li>
+        
       </ul>
     </nav>
   </header>
