--- a/Games.html
+++ b/Games.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gaming Store</title>
-  <link rel="stylesheet" href="/gms.css">
+  <link rel="stylesheet" href="./gms.css">
 </head>
 
 <body>
   <header>
     <nav class="navbar">
-      <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+      <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
       <input type="checkbox" id="check">
       <label for="check" class="open-menu">&#9776;</label>
       <label for="check" class="close-menu">&times;</label>
