--- a/FAQs.html
+++ b/FAQs.html
@@ -21,9 +21,10 @@
         <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
         <li><a href="./Consoles.html">Consoles</a></li>
         <li><a href="./Games.html">Gaming Peripherals</a></li>
-        <li><a href="./Games.html">Games</a></li>
+        <li><a href="./Gaming Peripherals.html">Games</a></li>
         <li><a href="./FAQs.html">FAQ</a></li>
         <li><a href="./index.html">Order Page </a></li>
+        
       </ul>
     </nav>
   </header>
