--- a/Gaming Peripherals.html
+++ b/Gaming Peripherals.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gaming Store</title>
-  <link rel="stylesheet" href="/all.css">
+  <link rel="stylesheet" href="./all.css">
 </head>
 
 <body>
   <header>
     <header>
       <nav class="navbar">
-        <a href="#" class="logo"><img src="/images/logo_transparent.png" alt="Logo"></a>
+        <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="open-menu">&#9776;</label>
         <label for="check" class="close-menu">&times;</label>
