--- a/Gaming Peripherals.html
+++ b/Gaming Peripherals.html
@@ -20,7 +20,7 @@
           <li><a href="./About Us.html">About Us</a></li>
           <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
           <li><a href="./Consoles.html">Consoles</a></li>
-          <li><a href="./Games.html">Gaming Peripherals</a></li>
+          <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
           <li><a href="./Games.html">Games</a></li>
           <li><a href="./FAQs.html">FAQ</a></li>
           <li><a href="./index.html">Order Page </a></li>
@@ -40,7 +40,7 @@
     
     <div class="peripherals-grid">
         <div class="peripheral-card">
-            <img src="/images/G peripherals/Razer mouse.avif" alt="Razer DeathAdder Elite">
+            <img src="./images/G peripherals/Razer mouse.avif" alt="Razer DeathAdder Elite">
             <div class="price-overlay">$52.49</div>
             <div class="discount-badge">-25%</div>
             <div class="peripheral-info">
@@ -50,7 +50,7 @@
         </div>
 
         <div class="peripheral-card">
-            <img src="/images/G peripherals/corsair.jpg" alt="Corsair K95 RGB">
+            <img src="./images/G peripherals/corsair.jpg" alt="Corsair K95 RGB">
             <div class="price-overlay">$169.99</div>
             <div class="peripheral-info">
                 <h3>Corsair K95 RGB</h3>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="peripheral-card">
-            <img src="/images/G peripherals/GP.avif" alt="HyperX Cloud II">
+            <img src="./images/G peripherals/GP.avif" alt="HyperX Cloud II">
             <div class="price-overlay">$79.99</div>
             <div class="discount-badge">-20%</div>
             <div class="peripheral-info">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="peripheral-card">
-            <img src="/images/G peripherals/qck.jpg" alt="SteelSeries QcK">
+            <img src="./images/G peripherals/qck.jpg" alt="SteelSeries QcK">
             <div class="price-overlay">$29.99</div>
             <div class="peripheral-info">
                 <h3>SteelSeries QcK</h3>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="peripheral-card">
-            <img src="/images/G peripherals/controller.webp" alt="Xbox Elite Controller">
+            <img src="./images/G peripherals/controller.webp" alt="Xbox Elite Controller">
             <div class="price-overlay">$152.99</div>
             <div class="discount-badge">-15%</div>
             <div class="peripheral-info">
@@ -88,7 +88,7 @@
         </div>
 
         <div class="peripheral-card">
-            <img src="/images/G peripherals/blue yeti.jpg" alt="Blue Yeti X">
+            <img src="./images/G peripherals/blue yeti.jpg" alt="Blue Yeti X">
             <div class="price-overlay">$169.99</div>
             <div class="peripheral-info">
                 <h3>Blue Yeti X</h3>
