--- a/FAQs.html
+++ b/FAQs.html
@@ -35,7 +35,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Store</title>
-    <link rel="stylesheet" href="gms.css">
+    <link rel="stylesheet" href="./gms.css">
   </head>
   
   <body>
