--- a/Games.html
+++ b/Games.html
@@ -19,7 +19,7 @@
         <li><a href="./About Us.html">About Us</a></li>
         <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
         <li><a href="./Consoles.html">Consoles</a></li>
-        <li><a href="./Games.html">Gaming Peripherals</a></li>
+        <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
         <li><a href="./Games.html">Games</a></li>
         <li><a href="./FAQs.html">FAQ</a></li>
         <li><a href="./index.html">Order Page </a></li>
@@ -36,7 +36,7 @@
     <article class="game-card">
         <div class="game-content">
             <div class="game-image-container">
-                <img src="/images/Game 1.jpg" alt="Elden Ring" class="game-image">
+                <img src="./images/Game 1.jpg" alt="Elden Ring" class="game-image">
             </div>
             <div class="game-info">
                 <h2 class="game-title">Elden Ring Shadow of the ErdTree</h2>
@@ -54,7 +54,7 @@
     <article class="game-card">
         <div class="game-content">
             <div class="game-image-container">
-                <img src="/images/game 2.jpg" alt="" class="game-image">
+                <img src="./images/game 2.jpg" alt="" class="game-image">
             </div>
             <div class="game-info">
                 <h2 class="game-title">Final Fantasy VII Rebirth </h2>
@@ -72,7 +72,7 @@
     <article class="game-card">
         <div class="game-content">
             <div class="game-image-container">
-                <img src="/images/game 3.jpg" alt="Assassins Creed Shadows" class="game-image">
+                <img src="./images/game 3.jpg" alt="Assassins Creed Shadows" class="game-image">
             </div>
             <div class="game-info">
                 <h2 class="game-title">   </h2>
@@ -91,7 +91,7 @@
     <article class="game-card">
         <div class="game-content">
             <div class="game-image-container">
-                <img src="/images/game 4.jpg" alt="Black Myth Wukong" class="game-image">
+                <img src="./images/game 4.jpg" alt="Black Myth Wukong" class="game-image">
             </div>
             <div class="game-info">
                 <h2 class="game-title">   </h2>
