--- a/FAQs.html
+++ b/FAQs.html
@@ -11,7 +11,7 @@
 
   <header>
     <nav class="navbar">
-      <a href="#" class="logo"><img src="./images/logo_transparent.png" alt="Logo"></a>
+      <a href="#" class="logo"><img src="../images/logo_transparent.png" alt="Logo"></a>
       <input type="checkbox" id="check">
       <label for="check" class="open-menu">&#9776;</label>
       <label for="check" class="close-menu">&times;</label>
@@ -20,11 +20,10 @@
         <li><a href="./About Us.html">About Us</a></li>
         <li><a href="./Upcoming Games.html">Upcoming Games</a></li>
         <li><a href="./Consoles.html">Consoles</a></li>
-        <li><a href="./Games.html">Gaming Peripherals</a></li>
-        <li><a href="./Gaming Peripherals.html">Games</a></li>
+        <li><a href="./Gaming Peripherals.html">Gaming Peripherals</a></li>
+        <li><a href="./Games.html">Games</a></li>
         <li><a href="./FAQs.html">FAQ</a></li>
         <li><a href="./index.html">Order Page </a></li>
-        
       </ul>
     </nav>
   </header>
